--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "smoothscroll-for-websites": "^1.5.1"
   },
   "devDependencies": {
     "eslint": "^8",
