--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "smoothscroll-for-websites": "^1.5.1",
+    "swiper": "^11.1.14",
     "uikit": "^3.21.13"
   },
   "devDependencies": {
