--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/react": "^2.4.8",
+    "datepicker": "^0.0.0",
+    "framer-motion": "^11.11.11",
     "imask": "^7.6.1",
     "intl-tel-input": "^24.7.0",
     "jquery": "^3.7.1",
+    "js-datepicker": "^5.18.3",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18",
+    "react-dom": "^18",
     "smoothscroll-for-websites": "^1.5.1",
     "swiper": "^11.1.14",
     "uikit": "^3.21.13"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "sass": "^1.80.6"
+    "postcss": "^8.4.48",
+    "sass": "^1.80.6",
+    "tailwindcss": "^3.4.14"
   }
 }
