--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "framer-motion": "^11.11.11",
     "imask": "^7.6.1",
     "intl-tel-input": "^24.7.0",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.7.1",
     "js-datepicker": "^5.18.3",
     "lucide-react": "^0.454.0",
+    "masonry-layout": "^4.2.2",
     "next": "15.0.3",
     "react": "^18",
     "react-dom": "^18",
