--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "datepicker": "^0.0.0",
     "framer-motion": "^11.11.11",
