--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.454.0",
     "masonry-layout": "^4.2.2",
     "next": "15.0.3",
+    "next-optimized-images": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
     "smoothscroll-for-websites": "^1.5.1",
